1. add the latest changes to the spider-web java interface from Rene, OZ1LQH.
Please note that there is a change to the spider.cgi file this time so that
the client show 'Connected to Node_Call' instead of the hostname.  You will
need to update your cgi file when you update the changes.  Please make sure
that you back up your old files first! (g0vgs)
05Jan03=======================================================================
1. fix some irritating messages caused by protocol loops in sh/c
2. update copyright
3. move GN from GJ to GI
31Dec02=======================================================================
1. Update files in the java client with fixes and additions from Rene, OZ1LQH
05Dec02=======================================================================
1. Fix SSID issues with AGWMsg.
2. updated show/hftable, vhftable, hfstats, vhfstats and dxstats after K1XX
sent in some sample code indicated new functionality he requires. Translators
please note that the stat* messages have been changed and e33 added. I have 
also added quite a bit of extra examples and things to the relevant HELP
texts. It is now possible to search from any date for up to 365 days of data.
You can get the information by prefix or by callsign or for ALL spots. 
04Dec02=======================================================================
1. updated sh/log to allow searching for more arbitrary strings such as IP
addresses
08Nov02=======================================================================
1. update Keps.pm to reflect which satellites now come round in the weekly
updates. I suggest that you copy this file to /spider/local and do a load/kep
and you should lose all the 'old' satellites (eg MIR).
08Nov02=======================================================================
1. made some small mods to grepdbg and spot2csv.pl
2. fix a possible DOS in dx command
07Nov02=======================================================================
1. allow three digit longitudes