@@ -1,0 +1,7 @@
+all: 	compile
+
+
+compile:
+	rm *.class
+	/usr/lib/java/bin/javac spiderclient.java
+
