@@ -4,6 +4,8 @@ Please note that there is a change to the spider.cgi file this time so that
 the client show 'Connected to Node_Call' instead of the hostname.  You will
 need to update your cgi file when you update the changes.  Please make sure
 that you back up your old files first! (g0vgs)
+2. yet more changes to the java client from Rene :-)  Also added a makefile
+and a Changes file for the client in the spider-web directory.
 05Jan03=======================================================================
 1. fix some irritating messages caused by protocol loops in sh/c
 2. update copyright
